# CharVolant

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml  codeql.yml
Source/: CMakeLists.txt  define.h  main.cpp
Source/Utils/: utils.cpp  utils.h
